[tool.poetry]
name = "aoi"
license = "MIT"
version = "0.1.0"
description = "aoi"
readme = "README.md"
homepage = "https://github.com/ap-1/aoi"
repository = "https://github.com/ap-1/aoi.git"
authors = ["ap-1 <67872951+ap-1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.0.1"
python-dotenv = "^0.15.0"

[tool.poetry.scripts]
start = "aoi.main:init"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ap-1/aoi/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
